# hexav2

./: .gitlab-ci.yml  Dockerfile  registry-cert.pem
application/: config.yaml
application/app/: api_v1.py  main.py  pyproject.toml
application/micro_services/configs/rancher_api/: pyproject.toml
application/micro_services/configs/vm_api/: pyproject.toml
application/micro_services/rancher_api/: pyproject.toml
application/micro_services/rancher_api/src/adapters/in_process/rancher_api/: rancher_api.py
application/micro_services/rancher_api/src/adapters/out_process/rancher/: cluster_adapter.py  kubeconfig_adapter.py  registration_adapter.py
application/micro_services/rancher_api/src/application/ports/rancher_ports/: cluster_creator.py  kubeconfig.py  node_registration.py
application/micro_services/rancher_api/src/application/ports/vm_ports/: vm_creator.py
application/micro_services/rancher_api/src/application/services/rancher_services/: cluster.py  kubeconfig.py  node.py
application/micro_services/rancher_api/src/application/services/vm_services/: remove_vm.py
application/micro_services/rancher_api/src/config/vars/: .env
application/micro_services/rancher_api/src/domain/models/rancher_models/: cluster.py  kubeconfig.py  node.py
application/micro_services/rancher_api/src/domain/services/rancher_injection/: service.py
application/micro_services/vm_api/: pyproject.toml
application/micro_services/vm_api/alembic/: alembic.ini
application/micro_services/vm_api/alembic/alembic/: env.py  logging.ini
application/micro_services/vm_api/alembic/alembic/versions/: 3a2f7e6bcb91_first_migration.py  7239092fb79b_initial_migration.py  86a283dfc88f_second_migration.py  8ae86a240afb_third_migration.py  92dd75f106c0_second_migration.py
application/micro_services/vm_api/src/adapters/in_process/vm_api/: vm_api.py
application/micro_services/vm_api/src/adapters/out_process/virt/: virt_adapter.py
application/micro_services/vm_api/src/application/ports/vm_ports/: vm_creator.py  vm_fetcher.py  vm_remover.py
application/micro_services/vm_api/src/application/services/vm_services/: create_vm.py  get_vm.py  remove_vm.py
application/micro_services/vm_api/src/config/templates_vm/: ks.cfg  master.cfg  standard.cfg  worker.cfg
application/micro_services/vm_api/src/config/vars/: .env
application/micro_services/vm_api/src/domain/models/vm_models/: vm_details.py  vm_model.py
application/micro_services/vm_api/src/infrastructure/config/: database.py
utils/common/: pyproject.toml
utils/common/common/: fetchTemplate.py  http_utils.py
utils/env-utils/: pyproject.toml
utils/env-utils/env_utils/: env_util.py
utils/fetch-json/: pyproject.toml
