[tool.poetry]
name = "common"
version = "0.1.0"
description = ""
authors = ["adi-los <adilmrabti15@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.112.1"}
uvicorn = "^0.30.6"
pyyaml = "^6.0.2"
dotenv-python = "^0.0.1"
requests = "^2.32.3"
environs = "^11.0.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
