[tool.poetry]
name = "vm-api"
version = "0.1.0"
description = "VM API"
authors = ["Adil"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.32"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.2"
libvirt-python = "^10.6.0"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
