[tool.poetry]
name = "rancher-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
paramiko = "^3.4.1"
common = {path = "../../../utils/common/dist/common-0.1.0-py3-none-any.whl"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
